main.handlebars is up and running

--- a/html_templates/style.css
+++ b/html_templates/style.css
@@ -21,7 +21,7 @@ hr {
   }
 
   .main {
-    background-image: url("/assets/img/nature.jpg");
+    background-image: url("nature.jpg");
   }
 
   .quote {
