--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -134,6 +134,14 @@
       </div>
         <button class="modal-close is-large" aria-label="close"></button>
       </div>
+      <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Gratitude Journal</strong>
+          </p>
+          <p>© 2020</p>
+        </div>
+      </footer>
     </div>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> 
