signup/login onclick modal

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -73,7 +73,7 @@
       </div>
 
       <!--Login modal-->
-      <div class="modal">
+      <div class="modal login">
         <div class="modal-background"></div>
           <div class="modal-content has-background-white">
             <h1 class="model-heading has-text-centered"> Gratitude Journal</h1>
@@ -105,7 +105,7 @@
       </div>
 
       <!--Signup modal-->
-      <div class="modal">
+      <div class="modal signup">
         <div class="modal-background"></div>
           <div class="modal-content has-background-white">
             <div class="container">
