--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,130 +10,8 @@
     <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
-    <div class="container">
-    <!--Navbar-->
-    <nav class="navbar is-primary is-spaced" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <h1> Gratitude Journal</h1>
-        </div>
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="buttons">
-              <a class="button is-inverted is-primary" id="signup-button">
-               <b>Signup</b> 
-              </a>
-              <a class="button is-inverted is-primary" id="login-button">
-                <b>Login</b> 
-               </a>
-            </div>
-          </div>
-        </div>
-      </nav>
-      <hr class="navbar-divider">
-      
-      <p class= "quote">Success is not final, failure is not fatal: it is the courage to continue that counts. </p>
-      <p class="quote-author"><b>Winston Churchill</b></p>
-      <!--Main section-->
-      <div class="tile is-ancestor">
-        <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="title has-text-centered">Gratitudes</p>
-            <article class="message">
-              <div class="message-body is-italic">
-               I got to catch up with Judy for coffee. It's been too long!
-              </div>
-              
-            </article>
-
-            <article class="message">
-              <div class="message-body is-italic">
-                My baby boy took his first steps! He is growing up too quickly.
-               </div>
-            </article>
-            <article class="message">
-              <div class="message-body is-italic">
-               We received an A+ on project 2.
-               </div>
-            </article>
-
-            <article class="message">
-              <div class="message-body is-italic">
-               The weather is beautiful today. I had a nice long run today. Feel so much better for it.
-               </div>
-            </article>
-          </article>
-        </div>
-        <div class="tile is-parent is-8">
-          <article class="tile is-child box main">
-            <h2 class="title is-2 has-text-centered has-text-weight-light">We can all get stuck thinking about the negatives in life. Use this journal to focus on the positives.</h2>
-            <div class="content">
-            </div>
-          </article>
-        </div>
-      </div>
-
-      <!--Login modal-->
-      <div class="modal login">
-        <div class="modal-background"></div>
-          <div class="modal-content has-background-white">
-            <h1 class="model-heading has-text-centered"> Gratitude Journal</h1>
-
-            <div class="field">
-              <label class="label">Email</label>
-              <div class="control">
-                <input class="input" type="email" placeholder="e.g. alexsmith@gmail.com">
-              </div>
-            </div>
-            <div class="field">
-              <label class="label">Password</label>
-              <div class="control">
-                <input class="input" type="text" placeholder="********">
-              </div>
-            </div>
-            <div class="field is-grouped">
-              <div class="control">
-                <button class="button is-primary">Login</button>
-              </div>
-              <div class="control">
-                <button class="button is-link is-light cancel-button">Cancel</button>
-              </div>
-            </div>
-            
-
-        </div>
-        <button class="modal-close is-large" aria-label="close"></button>
-      </div>
-
-      <!--Signup modal-->
-      <div class="modal signup">
-        <div class="modal-background"></div>
-          <div class="modal-content has-background-white">
-            <div class="container">
-            <h1 class="model-heading has-text-centered"> Gratitude Journal</h1>
-            <div class="field">
-              <label class="label">Email</label>
-              <div class="control">
-                <input class="input" type="email" placeholder="e.g. alexsmith@gmail.com">
-              </div>
-            </div>
-            <div class="field">
-              <label class="label">Password</label>
-              <div class="control">
-                <input class="input" type="text" placeholder="********">
-              </div>
-            </div>
-            <div class="field is-grouped">
-              <div class="control">
-                <button class="button is-primary">Signup</button>
-              </div>
-              <div class="control">
-                <button class="button is-link is-light cancel-button">Cancel</button>
-              </div>
-            </div>
-        </div>
-      </div>
-        <button class="modal-close is-large" aria-label="close"></button>
-      </div>
+    <div class="container background">
+    {{{body}}}
       <footer class="footer">
         <div class="content has-text-centered">
           <p>
