--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,14 +11,13 @@
     <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
-    <div class="container background">
+    <div class="container background ">
     {{{body}}}
       <footer class="footer">
         <div class="content has-text-centered">
           <p>
-            <strong>Gratitude Journal</strong>
+            <strong>Gratitude Journal © 2020</strong>
           </p>
-          <p>© 2020</p>
         </div>
       </footer>
     </div>
