save post route added in gratitude.js

--- a/views/newGratitude.handlebars
+++ b/views/newGratitude.handlebars
@@ -43,16 +43,7 @@
             <div class="field">
             <label class="label">Today I am grateful for:</label>
             <div class="control">
-                <textarea class="textarea" placeholder="Textarea"></textarea>
-            </div>
-            </div>
-            <div class="field">
-                <div class="control">
-                <button class="button is-info" id="save-gratitude"><b>Save</b></button>
-                <label class="checkbox is-pulled-right">
-                <input type="checkbox">
-                Check box to share gratitudes
-                </label>
+                <textarea class="textarea" id="gratitude-input" placeholder="Type here"></textarea>
             </div>
             </div>
             
@@ -60,13 +51,16 @@
             <div class="field">
             <label class="label">Todays act of kindness:</label>
             <div class="control">
-                <textarea class="textarea" placeholder="Textarea"></textarea>
+                <textarea class="textarea" id="action-input" placeholder="Type here"></textarea>
             </div>
             </div>
-
             <div class="field">
             <div class="control">
-                <button class="button is-info" id="save-kindness"><b>Save</b></button>
+                <button class="button is-info" id="save-button"><b>Save</b></button>
+                <label class="checkbox is-pulled-right">
+                <input type="checkbox">
+                Check box to share gratitudes
+                </label>
             </div>
             </div>
             </div>
