--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -27,7 +27,7 @@
             <p class="title has-text-centered">Gratitudes</p>
             <article class="message">
               
-                {{#each burgers}}
+                {{#each gratitude}}
                 {{#if public}}
                   <div class="message-body is-italic">{{this.gratitude}}
                   </div>
