public added to post object

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -33,7 +33,8 @@
                   </div>
                 {{/if}}
                 {{/each}}
-              
+              <div class="message-body is-italic">Saw nana today and we had a great chat.
+                  </div>
             </article>
           </article>
         </div>
