--- a/views/newGratitude.handlebars
+++ b/views/newGratitude.handlebars
@@ -58,7 +58,7 @@
             <div class="control">
                 <button class="button is-info" id="save-button"><b>Save</b></button>
                 <label class="checkbox is-pulled-right">
-                <input type="checkbox">
+                <input type="checkbox" id="checkbox">
                 Check box to share gratitudes
                 </label>
             </div>
