quotes api call and functionality

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,8 +18,8 @@
       </nav>
       
       
-      <p class= "quote">Success is not final, failure is not fatal: it is the courage to continue that counts. </p>
-      <p class="quote-author"><b>Winston Churchill</b></p>
+      <p class= "quote"></p>
+      <p class="quote-author has-text-weight-bold"></p>
       <!--Main section-->
       <div class="tile is-ancestor">
         <div class="tile is-parent ">
