--- a/views/viewGratitude.handlebars
+++ b/views/viewGratitude.handlebars
@@ -14,8 +14,8 @@
     </div>
 </nav>
       
-<p class= "quote">Success is not final, failure is not fatal: it is the courage to continue that counts. </p>
-  <p class="quote-author"><b>Winston Churchill</b></p>
+<p class= "quote"></p>
+  <p class="quote-author"><b></b></p>
     <!--Main section-->
     <div class="tile is-ancestor">
       <div class="tile is-vertical is-5">
@@ -35,7 +35,8 @@
     <div class="tile is-parent">
       <article class="tile is-child notification">
         <div class="content">
-          
+          <p class="subtitle has-text-centered is-size-3">Reflecting on past gratitudes</p>
+
         </div>
       </article>
     </div>
