--- a/views/viewGratitude.handlebars
+++ b/views/viewGratitude.handlebars
@@ -36,7 +36,11 @@
       <article class="tile is-child notification">
         <div class="content">
           <p class="subtitle has-text-centered is-size-3">Reflecting on past gratitudes</p>
-
+           <p class="subtitle is-size-4 search-date">{{this.createdAt}}</p>
+           <p class="subtitle is-size-4">Gratitude</p>
+           <p class="text is-size-6 is-italic" id="search-gratitude">{{this.gratitude}}</p>
+          <p class="subtitle is-size-4">Act of Kindness</p>
+           <p class="text is-size-6 is-italic search-action">{{this.action}}</p>
         </div>
       </article>
     </div>
