beach image in view handlebars

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -39,5 +39,9 @@
     margin-bottom: 3.5em;
   }
 
-  
-
+.image-container {
+  background: url('/assets/img/beach.jpg') center top no-repeat;
+  box-shadow: 25px 25px 50px 10px whitesmoke inset, -25px -25px 40px 10px whitesmoke inset; 
+  width: 332px;
+  height: 187px;
+  }
