--- a/views/viewGratitude.handlebars
+++ b/views/viewGratitude.handlebars
@@ -41,7 +41,9 @@
            <p class="text is-size-6 is-italic" id="search-gratitude">{{this.gratitude}}</p>
           <p class="subtitle is-size-4">Act of Kindness</p>
            <p class="text is-size-6 is-italic search-action">{{this.action}}</p>
+           <article class="tile is-child image-container"></article>
         </div>
       </article>
     </div>
     </div>
+    
