--- a/views/newGratitude.handlebars
+++ b/views/newGratitude.handlebars
@@ -18,11 +18,15 @@
       <p class="quote-author"><b>Winston Churchill</b></p>
       <!--Main section-->
       <div class="tile is-ancestor">
-  <div class="tile is-vertical is-5">
+        <div class="tile is-vertical is-5">
     <div class="tile">
       <div class="tile is-parent is-vertical">
         <article class="tile is-child notification tile-background">
           <p class="subtitle">Click on date to view past gratitudes</p>
+          <div class="calendar">
+            <p>Calendar</p>
+           
+          </div>
         </article>
         <article class="tile is-child notification tile-background">
           <p class="subtitle is-size-3" id="raok-title">Random acts of kindness</p>
@@ -33,6 +37,7 @@
     </div>
     
   </div>
+  
   <div class="tile is-parent">
     <article class="tile is-child notification">
       <div class="content">
