--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,8 +17,8 @@
         </div>
       </nav>
       
-      <p class= "quote"></p>
-      <p class="quote-author has-text-weight-bold"></p>
+      <p class= "quote is-size-6"></p>
+      <p class="quote-author has-text-weight-bold is-size-6"></p>
       <!--Main section-->
       <div class="tile is-ancestor">
         <div class="tile is-parent ">
@@ -26,12 +26,12 @@
             <p class="title has-text-centered">Gratitudes</p>
             <article class="message">
               
-                {{#each gratitude}}
-                {{#if public}}
-                  <div class="message-body is-italic">{{this.gratitude}}
+                <!--{{#each gratitude}}-->
+                <!--{{#if public}}-->
+                  <div class="message-body is-italic">{{gratitude}}
                   </div>
-                {{/if}}
-                {{/each}}
+                <!--{{/if}} -->
+                <!--{{/each}}-->
               <div class="message-body is-italic">Saw nana today and we had a great chat.
               </div>
             </article>
