--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,12 +26,12 @@
             <p class="title has-text-centered">Gratitudes</p>
             <article class="message">
               
-                <!--{{#each gratitude}}-->
-                <!--{{#if public}}-->
-                  <div class="message-body is-italic">{{gratitude}}
+                {{#each results}}
+               
+                  <div class="message-body is-italic">{{description}}
                   </div>
-                <!--{{/if}} -->
-                <!--{{/each}}-->
+                
+                {{/each}}
               <div class="message-body is-italic">Saw nana today and we had a great chat.
               </div>
             </article>
