--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,7 +23,7 @@
       <div class="tile is-ancestor">
         <div class="tile is-parent ">
           <article class="tile is-child box tile-background">
-            <p class="title has-text-centered">Gratitudes</p>
+            <p class="title has-text-centered">What you're sharing</p>
             <article class="message">
                 {{#each results}}
                   <div class="message-body is-italic">{{description}}
