calendar functionality, shows gratitude on click of a date

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,9 +42,16 @@
 .image-container {
   background: url('/assets/img/beach.jpg') center top no-repeat;
   box-shadow: 25px 25px 50px 10px whitesmoke inset, -25px -25px 40px 10px whitesmoke inset; 
-  width: 332px;
-  height: 187px;
+  width: 628px;
+  height: 354px;
   }
+
+  #tree {
+    background: url('/assets/img/tree.jpg') center top no-repeat;
+    box-shadow: 25px 25px 50px 10px whitesmoke inset, -25px -25px 40px 10px whitesmoke inset; 
+    width: 525px;
+    height: 420px;
+    }
   
   .message {
     width: auto;
