--- a/views/newGratitude.handlebars
+++ b/views/newGratitude.handlebars
@@ -30,10 +30,9 @@
           <p class="text is-size-6 has-text-justified is-italic">Create a holiday to celebrate someone you love. Find opportunities to give compliments. Help an elderly person with their groceries. Call your mum. Call a friend. Mow the lawn for your neighbours. Hold open the door for someone. Pay for someone's meal at a restaurant. Pick up litter on the beach. Send an email to a family member or friend. Take the time to listen to someone. Spend time with your grandparents. Cook a meal for a neighbour.
           </p>
         </article>
-        <article class="tile is-child notification tile-background">
-          <div id="tree"></div>
-          
-        </article>
+        <figure class="image is-child is-525x420">
+             <img src='/assets/img/tree.jpg'>
+           </figure>
       </div>
     </div>
   </div>
@@ -64,7 +63,7 @@
                 <button class="button is-info" id="save-button"><b>Save</b></button>
                 <label class="checkbox is-pulled-right">
                 <input type="checkbox" id="checkbox">
-                Check box to share gratitudes
+                Share gratitude
                 </label>
             </div>
             </div>
