--- a/views/viewGratitude.handlebars
+++ b/views/viewGratitude.handlebars
@@ -46,7 +46,9 @@
            <p class="text is-size-6 is-italic" id="search-gratitude">{{this.gratitude}}</p>
           <p class="subtitle is-size-4">Act of Kindness</p>
            <p class="text is-size-6 is-italic" id="search-action">{{this.action}}</p>
-           <article class="tile is-child image-container"></article>
+           <figure class="image is-child is-628x354">
+             <img src='/assets/img/beach.jpg'>
+           </figure>
         </div>
       </article>
     </div>
