--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge;" />
-    <title>Gratitude Journal</title>
-    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="/assets/dist/calendar.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    
-  </head>
-  <body>
-    <div class="container background ">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge;" />
+  <title>Gratitude Journal</title>
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css'>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/dist/calendar.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+
+</head>
+
+<body>
+  <div class="container background ">
     {{{body}}}
-    
-      <footer class="footer">
-        <div class="content has-text-centered">
-          <p>
-            <strong>Gratitude Journal © 2020</strong>
-          </p>
-        </div>
-      </footer>
-    </div>
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> 
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-     <script src = "/assets/dist/calendar.js"></script>
-      <script src = "/assets/js/gratitude.js"></script>
-      <script src = "/assets/js/login.js"></script>
-      <script src = "/assets/js/signup.js"></script>
-      
-  </body>
+
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>
+          <strong>Gratitude Journal © 2020</strong>
+        </p>
+      </div>
+    </footer>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
+  <script src="/assets/dist/calendar.js"></script>
+  <script src="/assets/js/gratitude.js"></script>
+  <script src="/assets/js/login.js"></script>
+  <script src="/assets/js/signup.js"></script>
+  <script src="/assets/js/facebook.js"></script>
+
+</body>
+
 </html>
