--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -45,10 +45,10 @@
 </div>
 
 <!--Login modal-->
-<div class="modal login">
+<div class="modal login" id="login-modal">
   <div class="modal-background"></div>
   <div class="modal-content has-background-white">
-    <h1 class="has-text-centered is-size-3"> Gratitude Journal</h1>
+    <h1 class="has-text-centered is-size-3"> Login</h1>
     <div class="field ">
       <label class="label">Email</label>
       <div class="control">
@@ -74,11 +74,11 @@
 </div>
 
 <!--Signup modal-->
-<div class="modal signup">
+<div class="modal signup" id="signup">
   <div class="modal-background"></div>
   <div class="modal-content has-background-white">
     <div class="container">
-      <h1 class="is-size-3 has-text-centered"> Gratitude Journal</h1>
+      <h1 class="is-size-3 has-text-centered">Signup</h1>
       <div class="field">
         <label class="label">Email</label>
         <div class="control">
