--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,10 +20,10 @@
   </div>
 </nav>
 {{!-- show error --}}
-<div style="display: none" id="alert" class="alert alert-danger" role="alert">
-  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+{{!-- <div style="display: none" id="alert" class="alert alert-danger" role="alert">
   <span class="sr-only">Error:</span> <span class="msg"></span>
-</div>
+</div> --}}
+<div class="tile is-ancestor"><span id="msg"></span></div>
 {{!-- end show error --}}
 <p class="quote is-size-6"></p>
 <p class="quote-author has-text-weight-bold is-size-6"></p>
