--- a/views/newGratitude.handlebars
+++ b/views/newGratitude.handlebars
@@ -18,8 +18,8 @@
         </div>
       </nav>
       
-      <p class= "quote">Success is not final, failure is not fatal: it is the courage to continue that counts. </p>
-      <p class="quote-author"><b>Winston Churchill</b></p>
+      <p class= "quote"></p>
+      <p class="quote-author"><b></b></p>
       <!--Main section-->
       <div class="tile is-ancestor">
         <div class="tile is-vertical is-5">
