facebook button test

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,6 +15,7 @@
         <a href="/auth/facebook" class="button is-inverted is-info" id="facebook-button">
           <b>fb login/signup</b>
         </a>
+        <div class="fb-login-button" data-size="medium" data-button-type="login_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="true" data-width="" id="facebook-button"></div>
       </div>
     </div>
   </div>
