--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -47,4 +47,15 @@
     overflow-y: auto;
     padding: 20px;
   }
+
+  #facebook-button {
+    color: white;
+    background-color: #1877F2;
+    border: #1877F2;
+    font-weight: bolder;
+  }
+
+  #facebook-icon {
+    padding-right: 0.5em;
+  }
   
