--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,11 +12,9 @@
         <a class="button is-inverted is-info" id="login-button">
           <b>Login</b>
         </a>
-        <a href="/auth/facebook" class="button is-inverted is-info" id="facebook-button">
-          <b>fb login/signup</b>
+        <a href="/auth/facebook" class="button" id="facebook-button">
+         <img src='/assets/img/icon.png'id="facebook-icon"> Login with Facebook
         </a>
-        <div class="fb-login-button" href="/auth/facebook" data-size="medium" data-button-type="login_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="true" data-width="" id="facebook-button"></div>
-      </div>
     </div>
   </div>
 </nav>
