updated image in newgratitudes and narrowed footer

--- a/views/newGratitude.handlebars
+++ b/views/newGratitude.handlebars
@@ -25,14 +25,75 @@
         <div class="tile is-vertical is-5">
     <div class="tile">
       <div class="tile is-parent is-vertical">
-        <article class="tile is-child notification tile-background ">
-        <p class="subtitle is-size-3" id="raok-title">Random acts of kindness ideas</p>
-          <p class="text is-size-6 has-text-justified is-italic">Create a holiday to celebrate someone you love. Find opportunities to give compliments. Help an elderly person with their groceries. Call your mum. Call a friend. Mow the lawn for your neighbours. Hold open the door for someone. Pay for someone's meal at a restaurant. Pick up litter on the beach. Send an email to a family member or friend. Take the time to listen to someone. Spend time with your grandparents. Cook a meal for a neighbour.
-          </p>
-        </article>
-        <figure class="image is-child is-525x420">
-             <img src='/assets/img/tree.jpg'>
-           </figure>
+        <article class="tile is-child box tile-background">
+      <p class="title has-text-centered">Random acts of kindness ideas</p>
+      <article class="message">
+        <div class="message-body is-italic">
+          Create a holiday to celebrate someone you love.
+        </div>
+        <div class="message-body is-italic">
+          Find opportunities to give compliments.
+        </div>
+        <div class="message-body is-italic">
+          Help an elderly person with their groceries.
+        </div>
+        <div class="message-body is-italic">
+          Call your mum.
+        </div>
+        <div class="message-body is-italic">
+          Call a friend.
+        </div>
+        <div class="message-body is-italic">
+         Mow the lawn for your neighbours.
+        </div>
+        <div class="message-body is-italic">
+          Hold open the door for someone.
+        </div>
+        <div class="message-body is-italic">
+          Pay for someone's meal at a restaurant.
+        </div>
+        <div class="message-body is-italic">
+          Pick up litter on the beach.
+        </div>
+        <div class="message-body is-italic">
+          Send an email to a family member or friend.
+        </div>
+        <div class="message-body is-italic">
+         Take the time to listen to someone.
+        </div>
+        <div class="message-body is-italic">
+         Spend time with your grandparents.
+        </div>
+        <div class="message-body is-italic">
+         Offer someone a lift
+        </div>
+        <div class="message-body is-italic">
+         Teach someone a new skill
+        </div>
+        <div class="message-body is-italic">
+         Give money to a busker
+        </div>
+        <div class="message-body is-italic">
+         Offer to walk someone’s dog
+        </div>
+        <div class="message-body is-italic">
+         Give someone a book recommendation
+        </div>
+        <div class="message-body is-italic">
+         Give blood
+        </div>
+        <div class="message-body is-italic">
+         Say hello to strangers you pass in the street
+        </div>
+        <div class="message-body is-italic">
+         Let a car merge in front of you
+        </div>
+        <div class="message-body is-italic">
+         Write a LinkedIn recommendation for a co-worker or connection
+        </div>
+      </article>
+    </article>
+        
       </div>
     </div>
   </div>
@@ -69,9 +130,15 @@
             </div>
             </div>
             </div>
-            </article>
+    </article>
             </div>
-            </div>
+    </div>
+
+  <div class="tile is-parent  is-horizontal-center">
+          <figure class="image is-child is-1231x575">
+             <img src='/assets/img/sea.jpg'>
+           </figure>
+  </div>
 
       
       
