--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,6 +18,7 @@
 
   .footer{
     background-color: hsl(204, 86%, 53%);
+    padding: 1.5em;
   }
   .quote {
     margin-top: 2em;
@@ -42,7 +43,7 @@
   
   .message {
     width: auto;
-    height: 450px;
+    height: 400px;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 20px;
@@ -58,4 +59,8 @@
   #facebook-icon {
     padding-right: 0.5em;
   }
-  
+
+  .is-horizontal-center {
+    justify-content: center;
+    margin-bottom: 1em;
+  }
