--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,9 @@
         <p>
           <strong>Gratitude Journal © 2020</strong>
         </p>
+        <p>
+          <a href="https://www.privacypolicies.com/privacy/view/83d1c40c52a2fd2a72197de8ffd237bb">Privacy Policy</a>
+        </p>
       </div>
     </footer>
   </div>
