--- a/views/viewGratitude.handlebars
+++ b/views/viewGratitude.handlebars
@@ -41,6 +41,7 @@
       <article class="tile is-child notification">
         <div class="content">
           <p class="subtitle has-text-centered is-size-3">Reflecting on past gratitudes</p>
+          <p class="count-gratitudes">You have <span class="count"></span> gratitude/s saved!</p>
            <p class="subtitle is-size-4" id="search-date">{{this.createdAt}}</p>
            <p class="subtitle is-size-4">Gratitude</p>
            <p class="text is-size-6 is-italic" id="search-gratitude">{{this.gratitude}}</p>
