Added edditing functionality. + buttons appear and disapper based on which location we are in the application

--- a/views/newGratitude.handlebars
+++ b/views/newGratitude.handlebars
@@ -121,6 +121,7 @@
             </div>
             <div class="field">
             <div class="control">
+                <button class="button is-info" id="edit-button"><b>Edit</b></button>
                 <button class="button is-info" id="save-button"><b>Save</b></button>
                 <label class="checkbox is-pulled-right">
                 <input type="checkbox" id="checkbox">
