--- a/views/viewGratitude.handlebars
+++ b/views/viewGratitude.handlebars
@@ -7,7 +7,7 @@
       <div class="navbar-item">
         <div class="buttons">
            <a class="button is-inverted is-info" id="write-button">
-            <b>New Gratitude</b> 
+            <b id="write-button-text">New Gratitude</b> 
           </a>
           <a class="button is-inverted is-info" id="logout-button">
             <b>Logout</b> 
