--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p>
-          <strong>Gratitude Journal © 2020</strong>
+          Gratitude Journal © 2020
         </p>
         <p>
           <a href="https://www.privacypolicies.com/privacy/view/83d1c40c52a2fd2a72197de8ffd237bb">Privacy Policy</a>
