--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 
     <footer class="footer">
       <div class="content has-text-centered">
-        <p>
+        <p id="footer-text">
           Gratitude Journal © 2020
         </p>
         <p>
