made buttons smaller

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,13 +6,13 @@
   <div class="navbar-end">
     <div class="navbar-item">
       <div class="buttons">
-        <a class="button is-inverted is-info" id="signup-button">
+        <a class="button is-inverted is-info is-small" id="signup-button">
           <b>Signup</b>
         </a>
-        <a class="button is-inverted is-info" id="login-button">
+        <a class="button is-inverted is-info is-small" id="login-button">
           <b>Login</b>
         </a>
-        <a href="/auth/facebook" class="button" id="facebook-button">
+        <a href="/auth/facebook" class="button is-small" id="facebook-button">
          <img src='/assets/img/icon.png'id="facebook-icon"> Login with Facebook
         </a>
     </div>
