updated linked in link

--- a/views/newGratitude.handlebars
+++ b/views/newGratitude.handlebars
@@ -6,10 +6,10 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-inverted is-info" id="view-button">
+              <a class="button is-inverted is-info is-small" id="view-button">
                 <b>View Gratitudes</b> 
               </a>
-              <a class="button is-inverted is-info" id="logout-button">
+              <a class="button is-inverted is-info is-small" id="logout-button">
                 <b>Logout</b> 
               </a>
               
