adding alt to images

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
           <b>Login</b>
         </a>
         <a href="/auth/facebook" class="button is-small" id="facebook-button">
-         <img src='/assets/img/icon.png'id="facebook-icon"> Login with Facebook
+         <img src='/assets/img/icon.png'id="facebook-icon" alt="facebook icon f"> Login with Facebook
         </a>
     </div>
   </div>
