--- a/views/newGratitude.handlebars
+++ b/views/newGratitude.handlebars
@@ -137,7 +137,7 @@
 
   <div class="tile is-parent  is-horizontal-center">
           <figure class="image is-child is-1231x575">
-             <img src='/assets/img/sea.jpg'>
+             <img src='/assets/img/sea.jpg' alt="ocean and mountains">
            </figure>
   </div>
 
