--- a/views/viewGratitude.handlebars
+++ b/views/viewGratitude.handlebars
@@ -29,7 +29,7 @@
               <div class="calendar">
             </article>
             <figure class="image is-child is-1231x575">
-             <img src='/assets/img/beach.jpg'>
+             <img src='/assets/img/beach.jpg' alt="beach">
             </figure>
           </div>
         </div>
