--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge;" />
   <title>Gratitude Journal</title>
+  <meta property="og:url" content="https://safe-dawn-22162.herokuapp.com/" />
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Gratitude Journal" />
+  <meta property="og:description" content="Share and save daily gratitudes" />
+  <meta property="og:image" content="/assets/img/nature.jpg"/>
+  <meta property="fb:app_id" content="289251682449047" />
   <link rel="preconnect" href="https://cors-anywhere.herokuapp.com/https://type.fit/api/quotes">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
