update css and packages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,10 +27,10 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p id="footer-text">
-          Gratitude Journal © 2020
+          Gratitude Journal © 2024
         </p>
         <p>
-          <a href="https://www.privacypolicies.com/privacy/view/83d1c40c52a2fd2a72197de8ffd237bb">Privacy Policy</a>
+          <a class="href-white" href="https://www.privacypolicies.com/privacy/view/83d1c40c52a2fd2a72197de8ffd237bb">Privacy Policy</a>
         </p>
       </div>
     </footer>
