--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -23,10 +23,12 @@
 
   #footer-text {
     color: white;
+    margin: 0;
+    font-size: 12px;
   }
   
   .quote {
-    margin-top: 2em;
+    padding-top: 0.5rem;
     text-align: center;
     font-style: italic;
   }
@@ -42,7 +44,7 @@
   .quote-author {
     text-align: center;
     font-style: italic;
-    margin-bottom: 1em;
+    padding-bottom: 0.5rem;
     font-weight: bolder;
   }
 
@@ -67,15 +69,44 @@
     background-color: #1877F2;
     border: #1877F2;
     font-weight: bolder;
+    border-radius: 6px;
+    &:hover {
+      background-color: #0b6dee;
+     }
   }
 
   #facebook-icon {
-    padding-right: 0.5em;
+    padding: 0.5em;
   }
 
   .is-horizontal-center {
     justify-content: center;
     margin-bottom: 1em;
+  }
+
+  .href-white {
+    font-size: 11px;
+    color: white;
+    text-decoration: underline;
+
+    &:hover {
+      font-size: 12px;
+      font-weight: bold;
+      color: white;
+    }
+  }
+
+  .login-headings {
+    font-size: 1.5rem;
+    font-family: 'Pacifico', cursive;
+    margin-bottom: 0.2em;
+    text-align: center;
+  }
+
+  .button {
+    height: 2.1rem;
+    font-size: .75rem;
+    border-radius: 6px;
   }
 
   
