--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,13 +6,13 @@
   <div class="navbar-end">
     <div class="navbar-item">
       <div class="buttons">
-        <a class="button is-inverted is-info is-small" id="signup-button">
+        <a class="button is-inverted is-info" id="signup-button">
           <b>Signup</b>
         </a>
-        <a class="button is-inverted is-info is-small" id="login-button">
+        <a class="button is-inverted is-info" id="login-button">
           <b>Login</b>
         </a>
-        <a href="/auth/facebook" class="button is-small" id="facebook-button">
+        <a href="/auth/facebook" id="facebook-button" class="button">
          <img src='/assets/img/icon.png'id="facebook-icon" alt="facebook icon f"> Login with Facebook
         </a>
     </div>
@@ -24,7 +24,7 @@
 <div class="tile is-ancestor">
   <div class="tile is-parent ">
     <article class="tile is-child box tile-background">
-      <p class="title has-text-centered">What you're sharing</p>
+      <p class="login-headings">What you're sharing</p>
       <article class="message">
         {{#each results}}
         <div class="message-body is-italic">{{description}}
@@ -35,7 +35,7 @@
   </div>
   <div class="tile is-parent is-8">
     <article class="tile is-child box main">
-      <h2 class="title is-2 has-text-centered has-text-weight-light">We can all get stuck thinking about the negatives
+      <h2 class="login-headings">We can all get stuck thinking about the negatives
         in life. Use this journal to focus on the positives.</h2>
       <div class="content">
       </div>
